fix: link highlight color on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
   margin: 0;
 }
 * {
-  -webkit-tap-highlight-color: var(--text-strong);
+  -webkit-tap-highlight-color: rgba(var(--background-selection), 0.5);
 }
 
 ::selection {
@@ -91,12 +91,13 @@ a {
   );
   text-decoration: none;
 }
+
 a:hover strong,
 a:hover em,
 a:hover {
   color: var(--text-strong-inv);
   background-position: 0 100%;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 ul {
@@ -332,11 +333,11 @@ footer {
 .toggle-btn {
   cursor: pointer;
   color: var(--text-base);
-  transition: 0.2s ease-in-out;
+  transition: 0.1s ease-in-out;
 }
 .toggle-btn:hover {
   color: var(--text-strong);
-  transition: 0.2s ease-in-out;
+  transition: 0.1s ease-in-out;
 }
 
 /* Common */
